# chatbox

./: .gitignore  README.md  TEST.md  chatbox.db  main.py  pyproject.toml
agents/: chatbox_ai.py
api/repositories/: users.py
api/routes/: __init__.py  auth.py  core.py  files.py  users.py  users_DELETE.py
api/routes/users/: __init__.py  delete.py  get.py  patch.py  post.py
api/services/: files.py  users.py  users_DELETE.py
db/: database.py  models.py
postman/: chatbox.postman_collection.json  chatbox_postman_collection.json
src/api/services/: files.py
src/config/: settings.py
src/utils/: serializers.py
utils/: jwt.py
